fix collapse

--- a/frontend/src/styles/box.scss
+++ b/frontend/src/styles/box.scss
@@ -1,9 +1,7 @@
 .react-grid-item.YouTube-box {
-    display: none;
     overflow-y: auto;
     background: #08a4bd;
     border-radius: 10px;
-    width: min-content;
 }
 
 .GoogleNews-box {
